--- a/src/locales/Header/english.json
+++ b/src/locales/Header/english.json
@@ -2,7 +2,6 @@
   "home": "Home",
   "aboutUs": "About Us",
   "courses": "Courses",
-  "contactUs": "Contact Us",
-  "contact": "Contact",
-  "location": "Our Location"
+  "contactUs": "Our location",
+  "contact": "Contact"
 }
